0.6.8/io.gladed.watchable/-watchable-map/index.md
[io.gladed.watchable](../index.md) / [WatchableMap](./index.md)

# WatchableMap

`class WatchableMap<K, V> : `[`MutableWatchableBase`](../-mutable-watchable-base/index.md)`<`[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>, `[`V`](index.md#V)`, `[`MutableMap`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-mutable-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>, `[`MapChange`](../-map-change/index.md)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>>, `[`ReadOnlyWatchableMap`](../-read-only-watchable-map.md)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>`

A [Watchable](../-watchable/index.md) wrapper for a [Map](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html) which may also be modified or bound. Use [watchableMapOf](../watchable-map-of.md) to create.

### Properties

| Name | Summary |
|---|---|
| [entries](entries.md) | `val entries: `[`Set`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html)`<`[`Entry`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/-entry/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>>` |
| [immutable](immutable.md) | `var immutable: `[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>`<br>The current immutable [T](../-mutable-watchable-base/index.md#T) form of [M](../-mutable-watchable-base/index.md#M). |
| [keys](keys.md) | `val keys: `[`Set`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html)`<`[`K`](index.md#K)`>` |
| [mutable](mutable.md) | `val mutable: `[`AbstractMutableMap`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-abstract-mutable-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>`<br>A map that checks and reports all change attempts. |
| [size](size.md) | `val size: `[`Int`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html) |
| [values](values.md) | `val values: `[`Collection`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-collection/index.html)`<`[`V`](index.md#V)`>` |

### Inherited Properties

| Name | Summary |
|---|---|
| [boundTo](../-mutable-watchable-base/bound-to.md) | `open val boundTo: `[`Watchable`](../-watchable/index.md)`<*>?`<br>The [Watchable](../-watchable/index.md) to which this object is bound, if any. |

### Functions

| Name | Summary |
|---|---|
| [applyBoundChange](apply-bound-change.md) | `fun `[`MutableMap`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-mutable-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>.applyBoundChange(change: `[`MapChange`](../-map-change/index.md)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Apply [change](../-mutable-watchable-base/apply-bound-change.md#io.gladed.watchable.MutableWatchableBase$applyBoundChange(io.gladed.watchable.MutableWatchableBase.M, io.gladed.watchable.MutableWatchableBase.C)/change) to [M](../-mutable-watchable-base/index.md#M). |
| [clear](clear.md) | `suspend fun clear(): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>all values from this map. |
| [containsKey](contains-key.md) | `fun containsKey(key: `[`K`](index.md#K)`): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html) |
| [containsValue](contains-value.md) | `fun containsValue(value: `[`V`](index.md#V)`): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html) |
| [equals](equals.md) | `fun equals(other: `[`Any`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-any/index.html)`?): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html) |
| [get](get.md) | `fun get(key: `[`K`](index.md#K)`): `[`V`](index.md#V)`?` |
| [hashCode](hash-code.md) | `fun hashCode(): `[`Int`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html) |
| [isEmpty](is-empty.md) | `fun isEmpty(): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html) |
| [minusAssign](minus-assign.md) | `suspend operator fun minusAssign(key: `[`K`](index.md#K)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>`suspend operator fun minusAssign(pairs: `[`Array`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-array/index.html)`<`[`K`](index.md#K)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>`suspend operator fun minusAssign(pairs: `[`Iterable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterable/index.html)`<`[`K`](index.md#K)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>`suspend operator fun minusAssign(pairs: `[`Sequence`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.sequences/-sequence/index.html)`<`[`K`](index.md#K)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) |
| [plusAssign](plus-assign.md) | `suspend operator fun plusAssign(from: `[`Pair`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>`suspend operator fun plusAssign(from: `[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>`suspend operator fun plusAssign(pairs: `[`Array`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-array/index.html)`<out `[`Pair`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>`suspend operator fun plusAssign(pairs: `[`Iterable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterable/index.html)`<`[`Pair`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>`suspend operator fun plusAssign(pairs: `[`Sequence`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.sequences/-sequence/index.html)`<`[`Pair`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) |
| [put](put.md) | `suspend fun put(key: `[`K`](index.md#K)`, value: `[`V`](index.md#V)`): `[`V`](index.md#V)`?`<br>Associate the [value](put.md#io.gladed.watchable.WatchableMap$put(io.gladed.watchable.WatchableMap.K, io.gladed.watchable.WatchableMap.V)/value) with the [key](put.md#io.gladed.watchable.WatchableMap$put(io.gladed.watchable.WatchableMap.K, io.gladed.watchable.WatchableMap.V)/key) in this map, returning the previous value for this [key](put.md#io.gladed.watchable.WatchableMap$put(io.gladed.watchable.WatchableMap.K, io.gladed.watchable.WatchableMap.V)/key) if any. |
| [putAll](put-all.md) | `suspend fun putAll(from: `[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>`suspend fun putAll(pairs: `[`Array`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-array/index.html)`<out `[`Pair`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>`suspend fun putAll(pairs: `[`Iterable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterable/index.html)`<`[`Pair`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>`suspend fun putAll(pairs: `[`Sequence`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.sequences/-sequence/index.html)`<`[`Pair`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) |
| [readOnly](read-only.md) | `fun readOnly(): `[`ReadOnlyWatchableMap`](../-read-only-watchable-map.md)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>`<br>Return an unmodifiable form of this [WatchableMap](./index.md). |
| [remove](remove.md) | `suspend fun remove(key: `[`K`](index.md#K)`): `[`V`](index.md#V)`?`<br>Remove the value associated with [key](remove.md#io.gladed.watchable.WatchableMap$remove(io.gladed.watchable.WatchableMap.K)/key), returning it if it was present. |
| [toImmutable](to-immutable.md) | `fun `[`MutableMap`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-mutable-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>.toImmutable(): `[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>`<br>Copy a mutable [M](../-mutable-watchable-base/index.md#M) to an immutable [T](../-mutable-watchable-base/index.md#T). |
| [toInitialChange](to-initial-change.md) | `fun `[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>.toInitialChange(): `[`MapChange.Initial`](../-map-change/-initial/index.md)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>`<br>Given the current state [T](../-mutable-watchable-base/index.md#T) return [C](../-mutable-watchable-base/index.md#C) representing the initial state, if any. |
| [toString](to-string.md) | `fun toString(): `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html) |

### Inherited Functions

| Name | Summary |
|---|---|
| [bind](../-mutable-watchable-base/bind.md) | `open suspend fun bind(scope: CoroutineScope, origin: `[`Watchable`](../-watchable/index.md)`<`[`C`](../-mutable-watchable-base/index.md#C)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Binds this unbound object to [origin](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.C)))/origin), such that when [origin](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.C)))/origin) changes, this object is updated to match [origin](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.C)))/origin) exactly, until [scope](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.C)))/scope) completes. While bound, this object may not be externally modified or rebound.`open suspend fun <C2 : `[`Change`](../-change.md)`> bind(scope: CoroutineScope, origin: `[`Watchable`](../-watchable/index.md)`<`[`C2`](../-mutable-watchable-base/bind.md#C2)`>, period: `[`Long`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html)`, apply: `[`M`](../-mutable-watchable-base/index.md#M)`.(`[`C2`](../-mutable-watchable-base/bind.md#C2)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Binds this unbound object to [origin](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.bind.C2)), kotlin.Long, kotlin.Function2((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.bind.C2, kotlin.Unit)))/origin), such that for every change to [origin](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.bind.C2)), kotlin.Long, kotlin.Function2((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.bind.C2, kotlin.Unit)))/origin), the change is applied to this object with [apply](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.bind.C2)), kotlin.Long, kotlin.Function2((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.bind.C2, kotlin.Unit)))/apply), until [scope](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.bind.C2)), kotlin.Long, kotlin.Function2((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.bind.C2, kotlin.Unit)))/scope) completes. While bound, this object may not be externally modified or rebound. |
| [doChange](../-mutable-watchable-base/do-change.md) | `fun <U> doChange(func: () -> `[`U`](../-mutable-watchable-base/do-change.md#U)`): `[`U`](../-mutable-watchable-base/do-change.md#U)<br>Run [func](../-mutable-watchable-base/do-change.md#io.gladed.watchable.MutableWatchableBase$doChange(kotlin.Function0((io.gladed.watchable.MutableWatchableBase.doChange.U)))/func) if changes are currently allowed, or throw if not. |
| [getInitialChange](../-mutable-watchable-base/get-initial-change.md) | `open fun getInitialChange(): `[`C`](../-mutable-watchable-base/index.md#C)`?`<br>Return the initial change that a new watcher should receive, if any |
| [record](../-mutable-watchable-base/record.md) | `fun record(change: `[`C`](../-mutable-watchable-base/index.md#C)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Record the latest change. |
| [unbind](../-mutable-watchable-base/unbind.md) | `open fun unbind(): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Remove any existing binding for this object. |
| [use](../-mutable-watchable-base/use.md) | `open suspend fun <U> use(func: `[`M`](../-mutable-watchable-base/index.md#M)`.() -> `[`U`](../-mutable-watchable-base/use.md#U)`): `[`U`](../-mutable-watchable-base/use.md#U)<br>Suspend until [func](../-mutable-watchable/use.md#io.gladed.watchable.MutableWatchable$use(kotlin.Function1((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.use.U)))/func) can safely execute, reading and/or writing data on [M](../-mutable-watchable/index.md#M) as desired and returning the result. Note: if currently bound ([isBound](../-mutable-watchable/is-bound.md) returns true), attempts to modify [M](../-mutable-watchable/index.md#M) will throw. |

### Extension Functions

| Name | Summary |
|---|---|
| [toWatchableMap](../kotlin.collections.-map/to-watchable-map.md) | `fun <K, V> `[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](../kotlin.collections.-map/to-watchable-map.md#K)`, `[`V`](../kotlin.collections.-map/to-watchable-map.md#V)`>.toWatchableMap(): `[`WatchableMap`](./index.md)`<`[`K`](../kotlin.collections.-map/to-watchable-map.md#K)`, `[`V`](../kotlin.collections.-map/to-watchable-map.md#V)`>`<br>Return a new [WatchableMap](./index.md) containing the elements of this [Map](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html). |
| [toWatchableValue](../to-watchable-value.md) | `fun <T> `[`T`](../to-watchable-value.md#T)`.toWatchableValue(): `[`WatchableValue`](../-watchable-value/index.md)`<`[`T`](../to-watchable-value.md#T)`>`<br>Convert this [T](../to-watchable-value.md#T) to a watchable value of [T](../to-watchable-value.md#T). |
